--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-hook-form": "^7.22.1",
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
+    "react-slideshow-image": "^3.6.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
   },
