--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.1",
     "react-router-dom": "^6.1.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
     "react-slideshow-image": "^3.6.0",
